--- a/v3/manifest.json
+++ b/v3/manifest.json
@@ -7,7 +7,8 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "main.js"
+    "service_worker": "main.js",
+    "type": "module"
   },
   "content_scripts": [
     {
